ARR Stack/Radarr/radarr.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: arr-stack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: arr-stack
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits: 
            memory: "512Mi"
            cpu: "250m" 
        ports: 
          - containerPort: 7878
        volumeMounts:
        - mountPath: /config
          name: data
        - mountPath: /media
          name: smb
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: radarr-claim
      - name: smb
        persistentVolumeClaim:
          claimName: radarr-smb
