ARR Stack/Radarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: arr-stack
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
